[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdg"
version = "0.1.0"
description = "Lightweight CLI tool to convert PDF/DOCX to Markdown and merge Markdown files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "futureformed"}
]
keywords = ["markdown", "pdf", "docx", "converter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markitdown[pdf,docx]>=0.1.6",
]

[project.scripts]
mdg = "mdg:main"

[project.urls]
Homepage = "https://github.com/futureformed/markdowngetdown"
Repository = "https://github.com/futureformed/markdowngetdown"
Issues = "https://github.com/futureformed/markdowngetdown/issues"
